milestone2/source symboltable/y.output
Nonterminals useless in grammar

   Z
   N
   assignment_expression_opt
   expression_opt
   parameter_type_list_opt


Rules useless in grammar

  275 Z: %empty


State 26 conflicts: 1 shift/reduce
State 449 conflicts: 1 reduce/reduce


Grammar

    0 $accept: base $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | string
    4                   | '(' expression ')'
    5                   | generic_selection

    6 constant: I_CONSTANT
    7         | F_CONSTANT

    8 string: STRING_LITERAL
    9       | FUNC_NAME

   10 generic_selection: GENERIC '(' assignment_expression ',' generic_assoc_list ')'

   11 generic_assoc_list: generic_association
   12                   | generic_assoc_list ',' generic_association

   13 generic_association: type_name ':' assignment_expression
   14                    | DEFAULT ':' assignment_expression

   15 postfix_expression: primary_expression
   16                   | postfix_expression '[' expression ']'
   17                   | postfix_expression '(' ')'
   18                   | postfix_expression '(' argument_expression_list ')'
   19                   | postfix_expression '.' IDENTIFIER
   20                   | postfix_expression PTR_OP IDENTIFIER
   21                   | postfix_expression INC_OP
   22                   | postfix_expression DEC_OP
   23                   | '(' type_name ')' '{' initializer_list '}'
   24                   | '(' type_name ')' '{' initializer_list ',' '}'

   25 argument_expression_list: assignment_expression
   26                         | argument_expression_list ',' assignment_expression

   27 unary_expression: postfix_expression
   28                 | INC_OP unary_expression
   29                 | DEC_OP unary_expression
   30                 | unary_operator cast_expression
   31                 | SIZEOF unary_expression
   32                 | SIZEOF '(' type_name ')'
   33                 | ALIGNOF '(' type_name ')'

   34 unary_operator: '&'
   35               | '*'
   36               | '+'
   37               | '-'
   38               | '~'
   39               | '!'

   40 cast_expression: unary_expression
   41                | '(' type_name ')' cast_expression

   42 multiplicative_expression: cast_expression
   43                          | multiplicative_expression '*' cast_expression
   44                          | multiplicative_expression '/' cast_expression
   45                          | multiplicative_expression '%' cast_expression

   46 additive_expression: multiplicative_expression
   47                    | additive_expression '+' multiplicative_expression
   48                    | additive_expression '-' multiplicative_expression

   49 shift_expression: additive_expression
   50                 | shift_expression LEFT_OP additive_expression
   51                 | shift_expression RIGHT_OP additive_expression

   52 relational_expression: shift_expression
   53                      | relational_expression '<' shift_expression
   54                      | relational_expression '>' shift_expression
   55                      | relational_expression LE_OP shift_expression
   56                      | relational_expression GE_OP shift_expression

   57 equality_expression: relational_expression
   58                    | equality_expression EQ_OP relational_expression
   59                    | equality_expression NE_OP relational_expression

   60 and_expression: equality_expression
   61               | and_expression '&' equality_expression

   62 exclusive_or_expression: and_expression
   63                        | exclusive_or_expression '^' and_expression

   64 inclusive_or_expression: exclusive_or_expression
   65                        | inclusive_or_expression '|' exclusive_or_expression

   66 logical_and_expression: inclusive_or_expression
   67                       | logical_and_expression AND_OP inclusive_or_expression

   68 logical_or_expression: logical_and_expression
   69                      | logical_or_expression OR_OP logical_and_expression

   70 conditional_expression: logical_or_expression
   71                       | logical_or_expression '?' expression ':' conditional_expression

   72 assignment_expression: conditional_expression
   73                      | unary_expression assignment_operator assignment_expression

   74 assignment_operator: '='
   75                    | MUL_ASSIGN
   76                    | DIV_ASSIGN
   77                    | MOD_ASSIGN
   78                    | ADD_ASSIGN
   79                    | SUB_ASSIGN
   80                    | LEFT_ASSIGN
   81                    | RIGHT_ASSIGN
   82                    | AND_ASSIGN
   83                    | XOR_ASSIGN
   84                    | OR_ASSIGN

   85 expression: assignment_expression
   86           | expression ',' assignment_expression

   87 constant_expression: conditional_expression

   88 declaration: declaration_specifiers ';'
   89            | declaration_specifiers init_declarator_list ';'
   90            | static_assert_declaration

   91 declaration_specifiers: storage_class_specifier declaration_specifiers
   92                       | storage_class_specifier
   93                       | type_specifier declaration_specifiers
   94                       | type_specifier
   95                       | type_qualifier declaration_specifiers
   96                       | type_qualifier
   97                       | function_specifier declaration_specifiers
   98                       | function_specifier
   99                       | alignment_specifier declaration_specifiers
  100                       | alignment_specifier

  101 init_declarator_list: init_declarator
  102                     | init_declarator_list ',' init_declarator

  103 hack: IDENTIFIER
  104     | constant

  105 init_declarator: declarator '=' hack
  106                | declarator

  107 storage_class_specifier: TYPEDEF
  108                        | EXTERN
  109                        | STATIC
  110                        | THREAD_LOCAL
  111                        | AUTO
  112                        | REGISTER

  113 type_specifier: VOID
  114               | CHAR
  115               | SHORT
  116               | INT
  117               | LONG
  118               | FLOAT
  119               | DOUBLE
  120               | SIGNED
  121               | UNSIGNED
  122               | BOOL
  123               | COMPLEX
  124               | IMAGINARY
  125               | atomic_type_specifier
  126               | struct_or_union_specifier
  127               | TYPEDEF_NAME

  128 struct_or_union_specifier: struct_or_union '{' struct_declaration_list '}'
  129                          | struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  130                          | struct_or_union IDENTIFIER

  131 struct_or_union: STRUCT
  132                | UNION

  133 struct_declaration_list: struct_declaration
  134                        | struct_declaration_list struct_declaration

  135 struct_declaration: specifier_qualifier_list ';'
  136                   | specifier_qualifier_list struct_declarator_list ';'
  137                   | static_assert_declaration

  138 specifier_qualifier_list: type_specifier specifier_qualifier_list
  139                         | type_specifier
  140                         | type_qualifier specifier_qualifier_list
  141                         | type_qualifier

  142 struct_declarator_list: struct_declarator
  143                       | struct_declarator_list ',' struct_declarator

  144 struct_declarator: ':' constant_expression
  145                  | declarator ':' constant_expression
  146                  | declarator

  147 atomic_type_specifier: ATOMIC '(' type_name ')'

  148 type_qualifier: CONST
  149               | RESTRICT
  150               | VOLATILE
  151               | ATOMIC

  152 function_specifier: INLINE
  153                   | NORETURN

  154 alignment_specifier: ALIGNAS '(' type_name ')'
  155                    | ALIGNAS '(' constant_expression ')'

  156 declarator: pointer direct_declarator
  157           | direct_declarator

  158 direct_declarator: IDENTIFIER
  159                  | '(' declarator ')'
  160                  | direct_declarator '[' ']'
  161                  | direct_declarator '[' '*' ']'
  162                  | direct_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  163                  | direct_declarator '[' STATIC assignment_expression ']'
  164                  | direct_declarator '[' type_qualifier_list '*' ']'
  165                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  166                  | direct_declarator '[' type_qualifier_list assignment_expression ']'
  167                  | direct_declarator '[' type_qualifier_list ']'
  168                  | direct_declarator '[' assignment_expression ']'
  169                  | direct_declarator '(' parameter_type_list ')'
  170                  | direct_declarator '(' ')'
  171                  | direct_declarator '(' identifier_list ')'

  172 pointer: '*' type_qualifier_list pointer
  173        | '*' type_qualifier_list
  174        | '*' pointer
  175        | '*'

  176 type_qualifier_list: type_qualifier
  177                    | type_qualifier_list type_qualifier

  178 parameter_type_list: parameter_list ',' ELLIPSIS
  179                    | parameter_list

  180 parameter_list: parameter_declaration
  181               | parameter_list ',' parameter_declaration

  182 parameter_declaration: declaration_specifiers declarator
  183                      | declaration_specifiers abstract_declarator
  184                      | declaration_specifiers

  185 identifier_list: IDENTIFIER
  186                | identifier_list ',' IDENTIFIER

  187 type_name: specifier_qualifier_list abstract_declarator
  188          | specifier_qualifier_list

  189 abstract_declarator: pointer direct_abstract_declarator
  190                    | pointer
  191                    | direct_abstract_declarator

  192 direct_abstract_declarator: '(' abstract_declarator ')'
  193                           | '[' ']'
  194                           | '[' '*' ']'
  195                           | '[' STATIC type_qualifier_list assignment_expression ']'
  196                           | '[' STATIC assignment_expression ']'
  197                           | '[' type_qualifier_list STATIC assignment_expression ']'
  198                           | '[' type_qualifier_list assignment_expression ']'
  199                           | '[' type_qualifier_list ']'
  200                           | '[' assignment_expression ']'
  201                           | direct_abstract_declarator '[' ']'
  202                           | direct_abstract_declarator '[' '*' ']'
  203                           | direct_abstract_declarator '[' STATIC type_qualifier_list assignment_expression ']'
  204                           | direct_abstract_declarator '[' STATIC assignment_expression ']'
  205                           | direct_abstract_declarator '[' type_qualifier_list assignment_expression ']'
  206                           | direct_abstract_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  207                           | direct_abstract_declarator '[' type_qualifier_list ']'
  208                           | direct_abstract_declarator '[' assignment_expression ']'
  209                           | '(' ')'
  210                           | '(' parameter_type_list ')'
  211                           | direct_abstract_declarator '(' ')'
  212                           | direct_abstract_declarator '(' parameter_type_list ')'

  213 initializer: '{' initializer_list '}'
  214            | '{' initializer_list ',' '}'
  215            | assignment_expression

  216 initializer_list: designation initializer
  217                 | initializer
  218                 | initializer_list ',' designation initializer
  219                 | initializer_list ',' initializer

  220 designation: designator_list '='

  221 designator_list: designator
  222                | designator_list designator

  223 designator: '[' constant_expression ']'
  224           | '.' IDENTIFIER

  225 static_assert_declaration: STATIC_ASSERT '(' constant_expression ',' STRING_LITERAL ')' ';'

  226 statement: labeled_statement
  227          | compound_statement
  228          | expression_statement
  229          | selection_statement
  230          | iteration_statement
  231          | jump_statement

  232 labeled_statement: IDENTIFIER ':' statement
  233                  | CASE constant_expression ':' statement
  234                  | DEFAULT ':' statement

  235 M: %empty

  236 compound_statement: '{' '}'

  237 $@1: %empty

  238 compound_statement: '{' $@1 M block_item_list '}'

  239 block_item_list: block_item
  240                | block_item_list block_item

  241 block_item: declaration
  242           | statement

  243 expression_statement: ';'
  244                     | expression ';'

  245 if: IF

  246 else: ELSE

  247 $@2: %empty

  248 selection_statement: if '(' expression ')' statement $@2 else statement

  249 $@3: %empty

  250 selection_statement: if '(' expression ')' statement $@3
  251                    | SWITCH '(' expression ')' statement

  252 P: %empty

  253 $@4: %empty

  254 iteration_statement: WHILE $@4 M '(' expression ')' statement

  255 $@5: %empty

  256 iteration_statement: DO $@5 M statement WHILE '(' expression ')' ';'
  257                    | FOR P '(' expression_statement expression_statement ')' statement
  258                    | FOR P '(' expression_statement expression_statement expression ')' statement
  259                    | FOR P '(' declaration expression_statement ')' statement
  260                    | FOR P '(' declaration expression_statement expression ')' statement

  261 jump_statement: GOTO IDENTIFIER ';'
  262               | CONTINUE ';'
  263               | BREAK ';'
  264               | RETURN ';'
  265               | RETURN expression ';'

  266 base: translation_unit

  267 translation_unit: external_declaration
  268                 | translation_unit external_declaration

  269 external_declaration: function_definition compound_statement
  270                     | declaration

  271 function_definition: declaration_specifiers declarator declaration_list
  272                    | declaration_specifiers declarator

  273 declaration_list: declaration
  274                 | declaration_list declaration


Terminals, with rules where they appear

$end (0) 0
'!' (33) 39
'%' (37) 45
'&' (38) 34 61
'(' (40) 4 10 17 18 23 24 32 33 41 147 154 155 159 169 170 171 192
    209 210 211 212 225 248 250 251 254 256 257 258 259 260
')' (41) 4 10 17 18 23 24 32 33 41 147 154 155 159 169 170 171 192
    209 210 211 212 225 248 250 251 254 256 257 258 259 260
'*' (42) 35 43 161 164 172 173 174 175 194 202
'+' (43) 36 47
',' (44) 10 12 24 26 86 102 143 178 181 186 214 218 219 225
'-' (45) 37 48
'.' (46) 19 224
'/' (47) 44
':' (58) 13 14 71 144 145 232 233 234
';' (59) 88 89 135 136 225 243 244 256 261 262 263 264 265
'<' (60) 53
'=' (61) 74 105 220
'>' (62) 54
'?' (63) 71
'[' (91) 16 160 161 162 163 164 165 166 167 168 193 194 195 196 197
    198 199 200 201 202 203 204 205 206 207 208 223
']' (93) 16 160 161 162 163 164 165 166 167 168 193 194 195 196 197
    198 199 200 201 202 203 204 205 206 207 208 223
'^' (94) 63
'{' (123) 23 24 128 129 213 214 236 238
'|' (124) 65
'}' (125) 23 24 128 129 213 214 236 238
'~' (126) 38
error (256)
IDENTIFIER (258) 1 19 20 103 129 130 158 185 186 224 232 261
STRING_LITERAL (259) 8 225
TYPEDEF_NAME (260) 127
I_CONSTANT (261) 6
F_CONSTANT (262) 7
SIZEOF (263) 31 32
FUNC_NAME (264) 9
PTR_OP (265) 20
INC_OP (266) 21 28
DEC_OP (267) 22 29
LEFT_OP (268) 50
RIGHT_OP (269) 51
LE_OP (270) 55
GE_OP (271) 56
EQ_OP (272) 58
NE_OP (273) 59
AND_OP (274) 67
OR_OP (275) 69
MUL_ASSIGN (276) 75
DIV_ASSIGN (277) 76
MOD_ASSIGN (278) 77
ADD_ASSIGN (279) 78
SUB_ASSIGN (280) 79
LEFT_ASSIGN (281) 80
RIGHT_ASSIGN (282) 81
AND_ASSIGN (283) 82
XOR_ASSIGN (284) 83
OR_ASSIGN (285) 84
TYPEDEF (286) 107
EXTERN (287) 108
STATIC (288) 109 162 163 165 195 196 197 203 204 206
AUTO (289) 111
REGISTER (290) 112
INLINE (291) 152
CONST (292) 148
RESTRICT (293) 149
VOLATILE (294) 150
BOOL (295) 122
CHAR (296) 114
SHORT (297) 115
INT (298) 116
LONG (299) 117
SIGNED (300) 120
UNSIGNED (301) 121
FLOAT (302) 118
DOUBLE (303) 119
VOID (304) 113
COMPLEX (305) 123
IMAGINARY (306) 124
STRUCT (307) 131
UNION (308) 132
ELLIPSIS (309) 178
CASE (310) 233
DEFAULT (311) 14 234
IF (312) 245
ELSE (313) 246
SWITCH (314) 251
WHILE (315) 254 256
DO (316) 256
FOR (317) 257 258 259 260
GOTO (318) 261
CONTINUE (319) 262
BREAK (320) 263
RETURN (321) 264 265
ALIGNAS (322) 154 155
ALIGNOF (323) 33
ATOMIC (324) 147 151
GENERIC (325) 10
NORETURN (326) 153
STATIC_ASSERT (327) 225
THREAD_LOCAL (328) 110


Nonterminals, with rules where they appear

$accept (98)
    on left: 0
primary_expression (99)
    on left: 1 2 3 4 5, on right: 15
constant (100)
    on left: 6 7, on right: 2 104
string (101)
    on left: 8 9, on right: 3
generic_selection (102)
    on left: 10, on right: 5
generic_assoc_list (103)
    on left: 11 12, on right: 10 12
generic_association (104)
    on left: 13 14, on right: 11 12
postfix_expression (105)
    on left: 15 16 17 18 19 20 21 22 23 24, on right: 16 17 18 19 20
    21 22 27
argument_expression_list (106)
    on left: 25 26, on right: 18 26
unary_expression (107)
    on left: 27 28 29 30 31 32 33, on right: 28 29 31 40 73
unary_operator (108)
    on left: 34 35 36 37 38 39, on right: 30
cast_expression (109)
    on left: 40 41, on right: 30 41 42 43 44 45
multiplicative_expression (110)
    on left: 42 43 44 45, on right: 43 44 45 46 47 48
additive_expression (111)
    on left: 46 47 48, on right: 47 48 49 50 51
shift_expression (112)
    on left: 49 50 51, on right: 50 51 52 53 54 55 56
relational_expression (113)
    on left: 52 53 54 55 56, on right: 53 54 55 56 57 58 59
equality_expression (114)
    on left: 57 58 59, on right: 58 59 60 61
and_expression (115)
    on left: 60 61, on right: 61 62 63
exclusive_or_expression (116)
    on left: 62 63, on right: 63 64 65
inclusive_or_expression (117)
    on left: 64 65, on right: 65 66 67
logical_and_expression (118)
    on left: 66 67, on right: 67 68 69
logical_or_expression (119)
    on left: 68 69, on right: 69 70 71
conditional_expression (120)
    on left: 70 71, on right: 71 72 87
assignment_expression (121)
    on left: 72 73, on right: 10 13 14 25 26 73 85 86 162 163 165 166
    168 195 196 197 198 200 203 204 205 206 208 215
assignment_operator (122)
    on left: 74 75 76 77 78 79 80 81 82 83 84, on right: 73
expression (123)
    on left: 85 86, on right: 4 16 71 86 244 248 250 251 254 256 258
    260 265
constant_expression (124)
    on left: 87, on right: 144 145 155 223 225 233
declaration (125)
    on left: 88 89 90, on right: 241 259 260 270 273 274
declaration_specifiers (126)
    on left: 91 92 93 94 95 96 97 98 99 100, on right: 88 89 91 93
    95 97 99 182 183 184 271 272
init_declarator_list (127)
    on left: 101 102, on right: 89 102
hack (128)
    on left: 103 104, on right: 105
init_declarator (129)
    on left: 105 106, on right: 101 102
storage_class_specifier (130)
    on left: 107 108 109 110 111 112, on right: 91 92
type_specifier (131)
    on left: 113 114 115 116 117 118 119 120 121 122 123 124 125 126
    127, on right: 93 94 138 139
struct_or_union_specifier (132)
    on left: 128 129 130, on right: 126
struct_or_union (133)
    on left: 131 132, on right: 128 129 130
struct_declaration_list (134)
    on left: 133 134, on right: 128 129 134
struct_declaration (135)
    on left: 135 136 137, on right: 133 134
specifier_qualifier_list (136)
    on left: 138 139 140 141, on right: 135 136 138 140 187 188
struct_declarator_list (137)
    on left: 142 143, on right: 136 143
struct_declarator (138)
    on left: 144 145 146, on right: 142 143
atomic_type_specifier (139)
    on left: 147, on right: 125
type_qualifier (140)
    on left: 148 149 150 151, on right: 95 96 140 141 176 177
function_specifier (141)
    on left: 152 153, on right: 97 98
alignment_specifier (142)
    on left: 154 155, on right: 99 100
declarator (143)
    on left: 156 157, on right: 105 106 145 146 159 182 271 272
direct_declarator (144)
    on left: 158 159 160 161 162 163 164 165 166 167 168 169 170 171,
    on right: 156 157 160 161 162 163 164 165 166 167 168 169 170 171
pointer (145)
    on left: 172 173 174 175, on right: 156 172 174 189 190
type_qualifier_list (146)
    on left: 176 177, on right: 162 164 165 166 167 172 173 177 195
    197 198 199 203 205 206 207
parameter_type_list (147)
    on left: 178 179, on right: 169 210 212
parameter_list (148)
    on left: 180 181, on right: 178 179 181
parameter_declaration (149)
    on left: 182 183 184, on right: 180 181
identifier_list (150)
    on left: 185 186, on right: 171 186
type_name (151)
    on left: 187 188, on right: 13 23 24 32 33 41 147 154
abstract_declarator (152)
    on left: 189 190 191, on right: 183 187 192
direct_abstract_declarator (153)
    on left: 192 193 194 195 196 197 198 199 200 201 202 203 204 205
    206 207 208 209 210 211 212, on right: 189 191 201 202 203 204
    205 206 207 208 211 212
initializer (154)
    on left: 213 214 215, on right: 216 217 218 219
initializer_list (155)
    on left: 216 217 218 219, on right: 23 24 213 214 218 219
designation (156)
    on left: 220, on right: 216 218
designator_list (157)
    on left: 221 222, on right: 220 222
designator (158)
    on left: 223 224, on right: 221 222
static_assert_declaration (159)
    on left: 225, on right: 90 137
statement (160)
    on left: 226 227 228 229 230 231, on right: 232 233 234 242 248
    250 251 254 256 257 258 259 260
labeled_statement (161)
    on left: 232 233 234, on right: 226
M (162)
    on left: 235, on right: 238 254 256
compound_statement (163)
    on left: 236 238, on right: 227 269
$@1 (164)
    on left: 237, on right: 238
block_item_list (165)
    on left: 239 240, on right: 238 240
block_item (166)
    on left: 241 242, on right: 239 240
expression_statement (167)
    on left: 243 244, on right: 228 257 258 259 260
if (168)
    on left: 245, on right: 248 250
else (169)
    on left: 246, on right: 248
selection_statement (170)
    on left: 248 250 251, on right: 229
$@2 (171)
    on left: 247, on right: 248
$@3 (172)
    on left: 249, on right: 250
P (173)
    on left: 252, on right: 257 258 259 260
iteration_statement (174)
    on left: 254 256 257 258 259 260, on right: 230
$@4 (175)
    on left: 253, on right: 254
$@5 (176)
    on left: 255, on right: 256
jump_statement (177)
    on left: 261 262 263 264 265, on right: 231
base (178)
    on left: 266, on right: 0
translation_unit (179)
    on left: 267 268, on right: 266 268
external_declaration (180)
    on left: 269 270, on right: 267 268
function_definition (181)
    on left: 271 272, on right: 269
declaration_list (182)
    on left: 273 274, on right: 271 274


State 0

    0 $accept: . base $end

    TYPEDEF_NAME   shift, and go to state 1
    TYPEDEF        shift, and go to state 2
    EXTERN         shift, and go to state 3
    STATIC         shift, and go to state 4
    AUTO           shift, and go to state 5
    REGISTER       shift, and go to state 6
    INLINE         shift, and go to state 7
    CONST          shift, and go to state 8
    RESTRICT       shift, and go to state 9
    VOLATILE       shift, and go to state 10
    BOOL           shift, and go to state 11
    CHAR           shift, and go to state 12
    SHORT          shift, and go to state 13
    INT            shift, and go to state 14
    LONG           shift, and go to state 15
    SIGNED         shift, and go to state 16
    UNSIGNED       shift, and go to state 17
    FLOAT          shift, and go to state 18
    DOUBLE         shift, and go to state 19
    VOID           shift, and go to state 20
    COMPLEX        shift, and go to state 21
    IMAGINARY      shift, and go to state 22
    STRUCT         shift, and go to state 23
    UNION          shift, and go to state 24
    ALIGNAS        shift, and go to state 25
    ATOMIC         shift, and go to state 26
    NORETURN       shift, and go to state 27
    STATIC_ASSERT  shift, and go to state 28
    THREAD_LOCAL   shift, and go to state 29

    declaration                go to state 30
    declaration_specifiers     go to state 31
    storage_class_specifier    go to state 32
    type_specifier             go to state 33
    struct_or_union_specifier  go to state 34
    struct_or_union            go to state 35
    atomic_type_specifier      go to state 36
    type_qualifier             go to state 37
    function_specifier         go to state 38
    alignment_specifier        go to state 39
    static_assert_declaration  go to state 40
    base                       go to state 41
    translation_unit           go to state 42
    external_declaration       go to state 43
    function_definition        go to state 44


State 1

  127 type_specifier: TYPEDEF_NAME .

    $default  reduce using rule 127 (type_specifier)


State 2

  107 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 107 (storage_class_specifier)


State 3

  108 storage_class_specifier: EXTERN .

    $default  reduce using rule 108 (storage_class_specifier)


State 4

  109 storage_class_specifier: STATIC .

    $default  reduce using rule 109 (storage_class_specifier)


State 5

  111 storage_class_specifier: AUTO .

    $default  reduce using rule 111 (storage_class_specifier)


State 6

  112 storage_class_specifier: REGISTER .

    $default  reduce using rule 112 (storage_class_specifier)


State 7

  152 function_specifier: INLINE .

    $default  reduce using rule 152 (function_specifier)


State 8

  148 type_qualifier: CONST .

    $default  reduce using rule 148 (type_qualifier)


State 9

  149 type_qualifier: RESTRICT .

    $default  reduce using rule 149 (type_qualifier)


State 10

  150 type_qualifier: VOLATILE .

    $default  reduce using rule 150 (type_qualifier)


State 11

  122 type_specifier: BOOL .

    $default  reduce using rule 122 (type_specifier)


State 12

  114 type_specifier: CHAR .

    $default  reduce using rule 114 (type_specifier)


State 13

  115 type_specifier: SHORT .

    $default  reduce using rule 115 (type_specifier)


State 14

  116 type_specifier: INT .

    $default  reduce using rule 116 (type_specifier)


State 15

  117 type_specifier: LONG .

    $default  reduce using rule 117 (type_specifier)


State 16

  120 type_specifier: SIGNED .

    $default  reduce using rule 120 (type_specifier)


State 17

  121 type_specifier: UNSIGNED .

    $default  reduce using rule 121 (type_specifier)


State 18

  118 type_specifier: FLOAT .

    $default  reduce using rule 118 (type_specifier)


State 19

  119 type_specifier: DOUBLE .

    $default  reduce using rule 119 (type_specifier)


State 20

  113 type_specifier: VOID .

    $default  reduce using rule 113 (type_specifier)


State 21

  123 type_specifier: COMPLEX .

    $default  reduce using rule 123 (type_specifier)


State 22

  124 type_specifier: IMAGINARY .

    $default  reduce using rule 124 (type_specifier)


State 23

  131 struct_or_union: STRUCT .

    $default  reduce using rule 131 (struct_or_union)


State 24

  132 struct_or_union: UNION .

    $default  reduce using rule 132 (struct_or_union)


State 25

  154 alignment_specifier: ALIGNAS . '(' type_name ')'
  155                    | ALIGNAS . '(' constant_expression ')'

    '('  shift, and go to state 45


State 26

  147 atomic_type_specifier: ATOMIC . '(' type_name ')'
  151 type_qualifier: ATOMIC .

    '('  shift, and go to state 46

    '('       [reduce using rule 151 (type_qualifier)]
    $default  reduce using rule 151 (type_qualifier)


State 27

  153 function_specifier: NORETURN .

    $default  reduce using rule 153 (function_specifier)


State 28

  225 static_assert_declaration: STATIC_ASSERT . '(' constant_expression ',' STRING_LITERAL ')' ';'

    '('  shift, and go to state 47


State 29

  110 storage_class_specifier: THREAD_LOCAL .

    $default  reduce using rule 110 (storage_class_specifier)


State 30

  270 external_declaration: declaration .

    $default  reduce using rule 270 (external_declaration)


State 31

   88 declaration: declaration_specifiers . ';'
   89            | declaration_specifiers . init_declarator_list ';'
  271 function_definition: declaration_specifiers . declarator declaration_list
  272                    | declaration_specifiers . declarator

    IDENTIFIER  shift, and go to state 48
    '('         shift, and go to state 49
    '*'         shift, and go to state 50
    ';'         shift, and go to state 51

    init_declarator_list  go to state 52
    init_declarator       go to state 53
    declarator            go to state 54
    direct_declarator     go to state 55
    pointer               go to state 56


State 32

   91 declaration_specifiers: storage_class_specifier . declaration_specifiers
   92                       | storage_class_specifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ALIGNAS       shift, and go to state 25
    ATOMIC        shift, and go to state 26
    NORETURN      shift, and go to state 27
    THREAD_LOCAL  shift, and go to state 29

    $default  reduce using rule 92 (declaration_specifiers)

    declaration_specifiers     go to state 57
    storage_class_specifier    go to state 32
    type_specifier             go to state 33
    struct_or_union_specifier  go to state 34
    struct_or_union            go to state 35
    atomic_type_specifier      go to state 36
    type_qualifier             go to state 37
    function_specifier         go to state 38
    alignment_specifier        go to state 39


State 33

   93 declaration_specifiers: type_specifier . declaration_specifiers
   94                       | type_specifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ALIGNAS       shift, and go to state 25
    ATOMIC        shift, and go to state 26
    NORETURN      shift, and go to state 27
    THREAD_LOCAL  shift, and go to state 29

    $default  reduce using rule 94 (declaration_specifiers)

    declaration_specifiers     go to state 58
    storage_class_specifier    go to state 32
    type_specifier             go to state 33
    struct_or_union_specifier  go to state 34
    struct_or_union            go to state 35
    atomic_type_specifier      go to state 36
    type_qualifier             go to state 37
    function_specifier         go to state 38
    alignment_specifier        go to state 39


State 34

  126 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 126 (type_specifier)


State 35

  128 struct_or_union_specifier: struct_or_union . '{' struct_declaration_list '}'
  129                          | struct_or_union . IDENTIFIER '{' struct_declaration_list '}'
  130                          | struct_or_union . IDENTIFIER

    IDENTIFIER  shift, and go to state 59
    '{'         shift, and go to state 60


State 36

  125 type_specifier: atomic_type_specifier .

    $default  reduce using rule 125 (type_specifier)


State 37

   95 declaration_specifiers: type_qualifier . declaration_specifiers
   96                       | type_qualifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ALIGNAS       shift, and go to state 25
    ATOMIC        shift, and go to state 26
    NORETURN      shift, and go to state 27
    THREAD_LOCAL  shift, and go to state 29

    $default  reduce using rule 96 (declaration_specifiers)

    declaration_specifiers     go to state 61
    storage_class_specifier    go to state 32
    type_specifier             go to state 33
    struct_or_union_specifier  go to state 34
    struct_or_union            go to state 35
    atomic_type_specifier      go to state 36
    type_qualifier             go to state 37
    function_specifier         go to state 38
    alignment_specifier        go to state 39


State 38

   97 declaration_specifiers: function_specifier . declaration_specifiers
   98                       | function_specifier .

    TYPEDEF_NAME  shift, and go to state 1
    TYPEDEF       shift, and go to state 2
    EXTERN        shift, and go to state 3
    STATIC        shift, and go to state 4
    AUTO          shift, and go to state 5
    REGISTER      shift, and go to state 6
    INLINE        shift, and go to state 7
    CONST         shift, and go to state 8
    RESTRICT      shift, and go to state 9
    VOLATILE      shift, and go to state 10
    BOOL          shift, and go to state 11
    CHAR          shift, and go to state 12
    SHORT         shift, and go to state 13
    INT           shift, and go to state 14
    LONG          shift, and go to state 15
    SIGNED        shift, and go to state 16
    UNSIGNED      shift, and go to state 17
    FLOAT         shift, and go to state 18
    DOUBLE        shift, and go to state 19
    VOID          shift, and go to state 20
    COMPLEX       shift, and go to state 21
    IMAGINARY     shift, and go to state 22
    STRUCT        shift, and go to state 23
    UNION         shift, and go to state 24
    ALIGNAS       shift, and go to state 25
    ATOMIC        shift, and go to state 26
    NORETURN      shift, and go to state 27
    THREAD_LOCAL  shift, and go to state 29

    $default  reduce using rule 98 (declaration_specifiers)

    declaration_specifiers     go to state 62
    storage_class_specifier    go to state 32
    type_specifier             go to state 33
    struct_or_union_specifier  go to state 34
    struct_or_union            go to state 35
    atomic_type_specifier      go to state 36
    type_qualifier             go to state 37
    function_specifier         go to state 38
    alignment_specifier        go to state 39


State 39

   99 declaration_specifiers: alignment_specifier . declaration_specifiers
  100                       | alignment_specifier .
